--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -34,7 +34,7 @@
 */
 
 // Define base and accent colors
-$base-color: #3498db;
+$base-color: #151515;
 $base-color-hover: darken($base-color, 10%);
 
 // Define background colors
@@ -154,12 +154,14 @@ header {
 
     ul {
         display: inline-block;
-        background: $background;
+        background: $base-color;
+        color: #b5e853;
         text-align: center;
         padding: 10px;
         margin: 0;
         border-bottom-right-radius: 4px;
         border-bottom-left-radius: 4px;
+
     }
 
     li {
@@ -168,18 +170,18 @@ header {
 
     a {
         display: block;
-        color: $base-color;
+        color: #b5e853;
         padding: 10px;
 
         &:hover {
-            color: $base-color-hover;
+            color: #b5e853;
             text-decoration: none;
-            background: #eee;
-            border-radius: 4px;
+            // background: #b5e853;
+            border-bottom: 1px solid #b5e853;
         }
 
         &:focus {
-            color: $base-color;
+            color: #b5e853;
             text-decoration: none;
         }
     }
@@ -187,7 +189,6 @@ header {
     &.active {
         display: block;
     }
-
     &.sticky {
         position: fixed;
         z-index: 999;
@@ -206,24 +207,24 @@ header {
     position: fixed;
     right: 15px;
     top: 10px;
-    color: $base-color;
+    color: #b5e853;
     font-size: 1.5em;
     z-index: 20;
     padding: 0 7px;
     border-radius: 4px;
-    background: $background;
+    background: $base-color;
 }
 
 #mobile-menu-close {
     display: none;
     text-align: right;
     width: 100%;
-    background: $background;
+    background: #151515;
     font-size: 1.5em;
     padding-right: 15px;
     padding-top: 10px;
     cursor: pointer;
-    color: $base-color;
+    color: #fff;
 
     span {
         font-size: 0.5em;
@@ -294,15 +295,15 @@ footer {
 
 .btn-rounded-white {
     display: inline-block;
-    color: #fff;
+    color: #b5e853;
     padding: 15px 25px;
-    border: 3px solid #fff;
+    border: 3px solid lighten($base-color, 25%);
     border-radius: 30px;
     @include transition();
 
     &:hover {
-        color: $base-color;
-        background: #fff;
+        color: #000;
+        background: #b5e853;
         text-decoration: none;
     }
 }
@@ -350,13 +351,14 @@ footer {
     height: 100vh;
     min-height: 500px;
     max-height: 1080px;
-    background: url(../images/lead-bg.jpg);
+    background: url(../images/background-image.jpg);
     background-size: cover;
     padding: 15px;
     overflow: hidden;
 }
 
 #lead-content {
+
     position: absolute;
     z-index: 10;
     top: 50%;
@@ -369,20 +371,42 @@ footer {
     }
 
     h1 {
-        color: #fff;
+        overflow: hidden;
+        border-right: .15em solid #b5e853;
+        color: #b5e853;
+        white-space: nowrap;
+        margin: 0 auto;
+        letter-spacing: .15em;
         font-weight: 900;
         font-size: 5em;
         text-transform: uppercase;
         letter-spacing: 0.05em;
         line-height: 0.9em;
+        animation:
+          typing 2.8s steps(35, end),
+          blink-caret .75s step-end infinite;
     }
+
+
 
     h2 {
         color: lighten($base-color, 25%);
         font-weight: 500;
         font-size: 2.25em;
-        margin-bottom: 15px;
+        margin: 15px 0;
     }
+}
+
+/* The typing effect */
+@keyframes typing {
+from { width: 0 }
+to { width: 100% }
+}
+
+/* The typewriter cursor effect */
+@keyframes blink-caret {
+from, to { border-color: transparent }
+50% { border-color: #b5e853; }
 }
 
 #lead-overlay {
@@ -405,7 +429,7 @@ footer {
     text-align: center;
     z-index: 10;
     bottom: 15px;
-    color: #fff;
+    color: #b5e853;
 
     span {
         cursor: pointer;
@@ -544,7 +568,7 @@ footer {
 
 .vtimeline-icon {
     position: relative;
-    color: #fff;
+    color: #b5e853;
     width: 50px;
     height: 50px;
     background: $base-color;
@@ -888,6 +912,8 @@ footer {
 
         h1 {
             font-size: 3em;
+            border-right: none;
+            animation: none;
         }
 
         h2 {
