style: Chage menu h1 animation opacity

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -399,8 +399,8 @@ footer {
 
 /* The typing effect */
 @keyframes typing {
-from { width: 0 }
-to { width: 100% }
+from { width: 0; opacity: 0;}
+to { width: 100%; opacity: 1;}
 }
 
 /* The typewriter cursor effect */
