--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -36,6 +36,7 @@
 // Define base and accent colors
 $base-color: #151515;
 $base-color-hover: darken($base-color, 10%);
+$point-color: #b5e853;
 
 // Define background colors
 $background: #fff;
@@ -155,7 +156,7 @@ header {
     ul {
         display: inline-block;
         background: $base-color;
-        color: #b5e853;
+        color: $point-color;
         text-align: center;
         padding: 10px;
         margin: 0;
@@ -170,17 +171,17 @@ header {
 
     a {
         display: block;
-        color: #b5e853;
+        color: $point-color;
         padding: 10px;
 
         &:hover {
-            color: #b5e853;
+            color: $point-color;
             text-decoration: none;
-            border-bottom: 1px solid #b5e853;
+            border-bottom: 1px solid $point-color;
         }
 
         &:focus {
-            color: #b5e853;
+            color: $point-color;
             text-decoration: none;
         }
     }
@@ -206,7 +207,7 @@ header {
     position: fixed;
     right: 15px;
     top: 10px;
-    color: #b5e853;
+    color: $point-color;
     font-size: 1.5em;
     z-index: 20;
     padding: 0 7px;
@@ -294,7 +295,7 @@ footer {
 
 .btn-rounded-white {
     display: inline-block;
-    color: #b5e853;
+    color: $point-color;
     padding: 15px 25px;
     border: 3px solid lighten($base-color, 25%);
     border-radius: 30px;
@@ -302,7 +303,7 @@ footer {
 
     &:hover {
         color: #000;
-        background: #b5e853;
+        background: $point-color;
         text-decoration: none;
     }
 }
@@ -371,8 +372,8 @@ footer {
 
     h1 {
         overflow: hidden;
-        border-right: .15em solid #b5e853;
-        color: #b5e853;
+        border-right: .15em solid $point-color;
+        color: $point-color;
         white-space: nowrap;
         margin: 0 auto;
         letter-spacing: .15em;
@@ -403,7 +404,7 @@ to { width: 100%; opacity: 1;}
 /* The typewriter cursor effect */
 @keyframes blink-caret {
 from, to { border-color: transparent }
-50% { border-color: #b5e853; }
+50% { border-color: $point-color; }
 }
 
 #lead-overlay {
@@ -426,7 +427,7 @@ from, to { border-color: transparent }
     text-align: center;
     z-index: 10;
     bottom: 15px;
-    color: #b5e853;
+    color: $point-color;
 
     span {
         cursor: pointer;
@@ -565,7 +566,7 @@ from, to { border-color: transparent }
 
 .vtimeline-icon {
     position: relative;
-    color: #b5e853;
+    color: $point-color;
     width: 50px;
     height: 50px;
     background: $base-color;
@@ -669,6 +670,7 @@ from, to { border-color: transparent }
     overflow: hidden;
     background: #fff;
     border-radius: 4px;
+    border: 1px solid #f2f2f5;
 }
 
 .project-image {
@@ -693,6 +695,7 @@ from, to { border-color: transparent }
         color: $text;
         margin: 0 0 15px 0;
         font-size: 0.9em;
+        text-align: left;
     }
 }
 
@@ -756,7 +759,7 @@ from, to { border-color: transparent }
 
     h2 {
         margin: 0 0 15px 0;
-        color: #fff;
+        color: $point-color;
         font-weight: 500;
     }
 }
@@ -803,6 +806,7 @@ from, to { border-color: transparent }
         @include transition();
 
         &:hover {
+            background-color: $point-color;
             box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
         }
     }
