--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -678,15 +678,15 @@ from, to { border-color: transparent }
 }
 
 .project-info {
-    position: absolute;
+    position: relative;
     top: 50%;
-    transform: translateY(-50%);
+    // transform: translateY(-50%);
     margin-left: 300px;
-    padding: 15px;
+    padding: 45px 20px 30px 15px;
 
-    h3 {
+    h2 {
         font-size: 1.5em;
-        font-weight: 300;
+        font-weight: 400;
         color: $heading;
         margin: 0 0 15px 0;
     }
